--- a/CODSOFT/TASK 3.html
+++ b/CODSOFT/TASK 3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Colorful Calculator</title>
-     <link rel="stylesheet" type="text/css" href="style.css">
+     <link rel="stylesheet" type="text/css" href="style3.css">
 </head>
 <body>
     
@@ -50,4 +50,5 @@
         function reset() { display.value = ""; }
     </script>
 </body>
+
 </html>
